add SingleLiveData.kt and update add/sub number of product in cart fragment

--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -23,6 +23,7 @@
         app:tabIconTint="@color/item_tab_color_selected"
         app:tabIndicatorColor="@color/point"
         app:tabIndicatorGravity="top"
+        app:tabIndicatorAnimationMode="elastic"
         app:tabSelectedTextColor="@color/point"
         app:tabTextAppearance="@style/bottomNavigation" />
 </androidx.constraintlayout.widget.ConstraintLayout>
