--- a/app/src/main/res/layout/item_child_recycler.xml
+++ b/app/src/main/res/layout/item_child_recycler.xml
@@ -2,6 +2,7 @@
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingStart="12dp"
     android:id="@+id/listItem">
 
 </androidx.recyclerview.widget.RecyclerView>
