--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -149,14 +149,15 @@
                 app:layout_constraintStart_toEndOf="@id/guideline6"
                 app:layout_constraintTop_toBottomOf="@id/txtNameStore" />
 
-            <androidx.viewpager2.widget.ViewPager2
+            <com.training.finalproject.utils.CustomViewPager
                 android:id="@+id/pagerProduct"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginTop="15dp"
                 android:minHeight="200dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/guideline7"
+                android:nestedScrollingEnabled="true"
                 app:layout_constraintStart_toEndOf="@id/guideline6"
                 app:layout_constraintTop_toBottomOf="@id/tabLayoutProduct" />
         </androidx.constraintlayout.widget.ConstraintLayout>
