--- a/app/src/main/res/layout/fragment_review_product.xml
+++ b/app/src/main/res/layout/fragment_review_product.xml
@@ -4,12 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.shopping.ReviewProductFragment">
+    tools:context=".home_activity.shopping.detail_product.presenter.ReviewProductFragment">
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:id="@+id/listReview"/>
