--- a/app/src/main/res/layout-land/fragment_login.xml
+++ b/app/src/main/res/layout-land/fragment_login.xml
@@ -111,7 +111,7 @@
         android:layout_marginEnd="30dp"
         app:boxBackgroundColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/txtPasswordInput"
         app:errorEnabled="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/guideline"
@@ -129,8 +129,8 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/txtEmailInput"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/txtEmailInput"
+        app:layout_constraintStart_toEndOf="@id/txtEmailInput"
         app:layout_constraintEnd_toEndOf="parent"
         app:errorEnabled="true"
         app:layout_constraintBottom_toBottomOf="parent"
