--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E9F1F5"
-    tools:context=".ui.shopping.CartFragment">
+    tools:context=".home_activity.shopping.cart.CartFragment">
 
     <include
         android:id="@+id/toolbar"
