--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E9F1F5"
-    tools:context=".ui.shopping.CheckoutFragment">
+    tools:context=".home_activity.shopping.CheckoutFragment">
 
     <include
         android:id="@+id/appBarCheckout"
