--- a/app/src/main/res/layout/fragment_feeds.xml
+++ b/app/src/main/res/layout/fragment_feeds.xml
@@ -4,8 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.dashboard.FeedsFragment">
-
+    tools:context=".home_activity.dashboard.FeedsFragment">
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/app_bar_home" />
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
