--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -88,6 +88,7 @@
             android:background="@drawable/search_view_shape"
             android:clickable="true"
             android:focusable="true"
+            android:id="@+id/searchBar"
             android:hint="Search product here"
             android:layoutDirection="rtl"
             app:iconifiedByDefault="true"
