--- a/app/src/main/res/layout/app_bar_product.xml
+++ b/app/src/main/res/layout/app_bar_product.xml
@@ -38,7 +38,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Your Cart"
-                    android:textAppearance="@style/header1"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:textSize="15sp"
+                    android:letterSpacing="0.01"
+                    android:textStyle="bold"
+                    android:lineSpacingExtra="-10sp"
                     android:textColor="@color/black"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/btnCart"
