--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E9F1F5"
-    tools:context=".home_activity.shopping.cart.CartFragment">
+    tools:context=".home_activity.dashboard.shopping.cart.CartFragment">
 
     <include
         android:id="@+id/toolbar"
@@ -30,6 +30,9 @@
                 android:id="@+id/chkSelectAll"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_light"
+                android:letterSpacing="0.01"
+                android:lineSpacingExtra="-4sp"
                 android:text="Select All Item"
                 android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@id/guideline8"
