--- a/app/src/main/res/layout/fragment_feeds.xml
+++ b/app/src/main/res/layout/fragment_feeds.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".home_activity.dashboard.FeedsFragment">
+    tools:context=".home_activity.dashboard.feeds.FeedsFragment">
     <include
         android:id="@+id/toolbar"
         layout="@layout/app_bar_home" />
