--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".home_activity.shopping.detail_product.presenter.ProductDetailFragment">
+    tools:context=".home_activity.dashboard.shopping.detail_product.presenter.ProductDetailFragment">
 
     <include
         android:id="@+id/appBar"
