--- a/app/src/main/res/layout/fragment_product_details_information.xml
+++ b/app/src/main/res/layout/fragment_product_details_information.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:padding="25dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".home_activity.shopping.detail_product.presenter.ProductDetailsInformationFragment">
+    tools:context=".home_activity.dashboard.shopping.detail_product.presenter.ProductDetailsInformationFragment">
 
     <TextView
         android:layout_width="match_parent"
