--- a/app/src/main/res/layout/fragment_transaction.xml
+++ b/app/src/main/res/layout/fragment_transaction.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".home_activity.dashboard.TransactionFragment">
+    tools:context=".home_activity.dashboard.transaction.TransactionFragment">
 
     <TextView
         android:layout_width="match_parent"
