--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -6,6 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".home_activity.dashboard.myprofile.MyProfileFragment">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/app_bar_home"/>
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
